[package]
name = "estripe"
version = "0.1.0"
authors = ["Pificária <mort.fp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = "0.8"
rosc = "~0.5"
structopt = "0.3"
parking_lot = "0.11"
packed_simd = { version = "0.3.6", package = "packed_simd_2" }
tokio = { version = "1", features = ["full"] }
